Strart page with all adjustments

--- a/StartPageRaedy.html
+++ b/StartPageRaedy.html
@@ -80,13 +80,12 @@
 					</label>
 				</div>
 				<form class = "registrationForm">
-					<a href="Cabinet.html">
-						<ul class="go1">
-
-						</ul>
-					</a>
+	
 					<div class = "orline">
 						
+					</div>
+					<div class="socshare">
+						Поділіться з друзями в соц-мережах
 					</div>
 					<div class="soc">
 						<a href="https://www.facebook.com/"><li class="fb"></li></a>
