--- a/Cabinet.html
+++ b/Cabinet.html
@@ -4,6 +4,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="stylecab.css">
 		<script type="text/javascript" src="js/jquery-3.3.1.slim.js"></script>
+		<script type="text/javascript" src="js/script1.js"></script>
 		<script type="text/javascript" src = "js/cabinetScript.js"> </script>
 		<meta charset = "utf-8">
 		<title></title>
