Add button to go to the site.

--- a/MapInCabinet.html
+++ b/MapInCabinet.html
@@ -19,6 +19,7 @@
 			<p> <output id = "description"> </output> </p>
 			<button onclick = "VNZSelected()"> Обрати цей ВНЗ </button>
 			<button onclick = "backToMap()"> Повенутися до мапи </button>
+			<a id = "VNZCiteButton" > <button onclick = "toVNZCite(event.currentTarget)" class="vnzbtn">На сайт ВНЗ</button> </a>
 		</div>
 		<script
 			src = "js/MapInCabinetScript.js"> </script>
