--- a/calculator.html
+++ b/calculator.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="js/jquery-3.3.1.slim.js"></script>
 	<script type="text/javascript" src="js/script_c.js"></script>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Калькулятор КБ</title>
 </head>
 <body>
 	<a href="./">
