--- a/StartPageRaedy.html
+++ b/StartPageRaedy.html
@@ -31,12 +31,12 @@
 			</div>
 			<ul class="img1">
 					<ul class="message">
-						Тут может быть каокое-то сообщене, ссылка, или кнопка
+						Привіт, думаєшь куди поступити? Хутчіш заходь та проходь квест.
 					</ul>
 				</ul>
 			<div class = "text"> 
 				<p class="head">OlimpProject</p>
-				<p> В наш час школярам дуже важко зрозуміти ким вони хочуть стати, і як вірно вибрати професію. Всі ці складнощі під час вступної компанії дуже збивають з пантилику. Якщо ж і ви потрапили у таку ситуацію, наш квест допоможе вам її вирішити."</p>
+				<p> У наш час перед школярами відкривается широкий спектр майбутніх професій і постає питання: "У який ВНЗ вступити? ". Доволі важко зробити вибір, ажде він може вплинути на все подальше життя. Щоб полегшити ваші міркування та заощадити вам час, наш проект підготував цікавий та інформативний квест.</p>
 			</div>
 			<a href = "#registrationFormBlock">
 				<ul class="row">
@@ -55,13 +55,13 @@
 				</ul>
 			<div class = "text"> 
 				<p class="head">Що ви дізнаєтесь завершивши наш квест?</p>
-				<p> По закінченню цього квесту ви зможете вирішити де вчитися, зрозумієте як подавати заявку на вступ , будете розуміти свої шанси поступити на бюджет та ознайомитесь з майбутнью професією.</p>
+				<p>Для створення квесту наша команда опиралася на поточні правила вступної компанії до ВНЗ, різноманітні рейтинги і відгуки від студентів та вже випусників ВНЗ. Тому ми розповімо всі важливі аспекти, особливості та ваші перспективи після закінчення ВНЗ.</p>
 			</div>
 		</div>
 
 		<div class = "block3" id="registrationFormBlock">
 			<div class = "registrationFormBlock"> 
-				<p> Щоб почати квест - увійдіть у свій аккаунт або зареєструйте новий</p>
+				<p> Щоб почати квест, зареєструйте аккаунт або увійдіть через соціальні мережі. Бажаймо успіхів!</p>
 				<div class= "registrationFormSwitchButtons">
 					<label for="email">
 					<ul class="in1" id="in1">
@@ -74,7 +74,7 @@
 					<label>
 						<ul class="reg1">
 							<ul class="form">
-								Сюда я могу вставить форму для регистрации или еще что-нибудь
+								Будь першим на шляху до мрії, заходь скоріше
 							</ul>
 					</ul>
 					</label>
