--- a/Cabinet.html
+++ b/Cabinet.html
@@ -182,7 +182,7 @@
 			Розрахунок конкурсного балу
 			</a>
 		<a href="logout.php">
-		<div class="exit">
+		<div class="exit1">
 			Вихід
 		</div>
 	</a>
