back btn calculator

--- a/calculator.html
+++ b/calculator.html
@@ -8,9 +8,6 @@
 	<title></title>
 </head>
 <body>
-	<a href="./">
-		<p class="head1"></p>
-	</a>
 	<p class="head1">Розрахунок конкурсного балу:</p>
 	<div class="baltab">
 
@@ -21,12 +18,17 @@
 	<ul class="table">
 		Таблиця для переводу балу атестату в 200 бальну систему
 	</ul>
+	<a href="Cabinet.html">
+	<ul class="exit2">
+		До кабінету
+	</ul>
+</a>
 	<div class="calculator">
-	<li><input id="bal1" class="bal" type="number" min='0' max='200' required="required" placeholder="Бал ЗНО з математики"></li>
-	<li><input id="bal2" class="bal" type="number" min='0' max='200' required="required" placeholder="Бал ЗНО з української мови"></li>
-	<li><input id="bal3" class="bal" type="number" min='0' max='200' required="required" placeholder="Бал ЗНО з англійськоі мови чи фізики"></li>
-	<li><input id="bal4" class="bal" type="number" min='0' max='200' required="required" placeholder="Середній бал атестата в 200 бальній системі"></li>
-	<li><input id="bal5" class="bal" type="number" min='0' max='200' required="required" placeholder="Бал курсів ФДП"></li>
+	<li><input id="bal1" class="bal" type="text" placeholder="Бал ЗНО з математики"></li>
+	<li><input id="bal2" class="bal" type="text" placeholder="Бал ЗНО з української мови"></li>
+	<li><input id="bal3" class="bal" type="text" placeholder="Бал ЗНО з англійськоі мови чи фізики"></li>
+	<li><input id="bal4" class="bal" type="text" placeholder="Середній бал атестата в 200 бальній системі"></li>
+	<li><input id="bal5" class="bal" type="text" placeholder="Бал курсів ФДП"></li>
 	<button>Розрахувати</button>
 	<li><input id="res" class="res" type="text"></li>
 	</div>
