OP-00: unnessesary files deleted, minor code improvements

--- a/QuestDocCol.html
+++ b/QuestDocCol.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Збір документів</title>
 		<link rel="stylesheet" type="text/css" href="style_quest.css">
 		<script type="text/javascript" src="js/jquery-3.3.1.slim.js"></script>
 		<script type="text/javascript" src="js/script_quest.js"></script>
@@ -22,7 +22,7 @@
 			<li id="point3">3. Військовий квиток</li>
 			<li id="point4">4. Сертифікат з іноземної мови</li>
 		</div>
-		<a href="Cabinet.html" class="finish" id="finish">Завершити квест</a>
+		<a href="./" class="finish" id="finish">Завершити квест</a>
 		<a href="QuestDocCol.html" class="finish" id="restart">Почати заново</a>
 		<div class="table">
 		<ul class="docback need" id="docb1"><div class="document" id="doc1"></div></ul>
