--- a/calculator.html
+++ b/calculator.html
@@ -22,7 +22,7 @@
 	<ul class="table">
 		Таблиця для переводу балу атестату в 200 бальну систему
 	</ul>
-	<a href="Cabinet.html">
+	<a href="./">
 	<ul class="exit2">
 		До кабінету
 	</ul>
