--- a/calculator.html
+++ b/calculator.html
@@ -6,6 +6,10 @@
 	<script type="text/javascript" src="js/script_c.js"></script>
 	<meta charset="utf-8">
 	<title></title>
+
+	<link rel="icon" 
+          type="image/ico" 
+          href="images/favicon.ico">
 </head>
 <body>
 	<p class="head1">Розрахунок конкурсного балу:</p>
@@ -18,7 +22,7 @@
 	<ul class="table">
 		Таблиця для переводу балу атестату в 200 бальну систему
 	</ul>
-	<a href="Cabinet.html">
+	<a href="./">
 	<ul class="exit2">
 		До кабінету
 	</ul>
