New version of site

--- a/calculator.html
+++ b/calculator.html
@@ -6,10 +6,6 @@
 	<script type="text/javascript" src="js/script_c.js"></script>
 	<meta charset="utf-8">
 	<title></title>
-
-	<link rel="icon" 
-          type="image/ico" 
-          href="images/favicon.ico">
 </head>
 <body>
 	<p class="head1">Розрахунок конкурсного балу:</p>
@@ -22,13 +18,13 @@
 	<ul class="table">
 		Таблиця для переводу балу атестату в 200 бальну систему
 	</ul>
-	<a href="./">
+	<a href="Cabinet.html">
 	<ul class="exit2">
 		До кабінету
 	</ul>
 </a>
 	<div class="calculator">
-	<li><input id="bal1" class="bal" type="text" placeholder="Бал ЗНО з математики"></li>
+	<li><input id="bal1" class="bal" type="text" placeholder="Бал ЗНО з математики або Історії України"></li>
 	<li><input id="bal2" class="bal" type="text" placeholder="Бал ЗНО з української мови"></li>
 	<li><input id="bal3" class="bal" type="text" placeholder="Бал ЗНО з англійськоі мови чи фізики"></li>
 	<li><input id="bal4" class="bal" type="text" placeholder="Середній бал атестата в 200 бальній системі"></li>
