OP-00: animation fixes

--- a/QuestDocCol.html
+++ b/QuestDocCol.html
@@ -22,7 +22,7 @@
 			<li id="point3">3. Військовий квиток</li>
 			<li id="point4">4. Сертифікат з іноземної мови</li>
 		</div>
-		<a href="Cabinet.html" class="finish" id="finish">Завершити квест</a>
+		<a href="./" class="finish" id="finish">Завершити квест</a>
 		<a href="QuestDocCol.html" class="finish" id="restart">Почати заново</a>
 		<div class="table">
 		<ul class="docback need" id="docb1"><div class="document" id="doc1"></div></ul>
